@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: berkdb.cygclass,v 1.10 2008-04-16 00:16:56 yselkowitz Exp $
+# $Id: berkdb.cygclass,v 1.11 2008-05-09 18:36:36 yselkowitz Exp $
 #
 ################################################################################
 
@@ -53,7 +53,7 @@ PKG_CONTENTS[2]="etc/p*/lib${PN}-devel.sh usr/include/ usr/lib/lib* usr/share/do
 PKG_CONTENTS[3]="etc/p*/java-${PN}.sh usr/bin/cygdb_java-${SLOT}.dll ${JAVA_DIR#/}"
 PKG_CONTENTS[4]="${TCL_LIBDIR#/}"
 
-DIFF_EXCLUDES="configure config.hin db.jar libtool.ac lt*.ac"
+DIFF_EXCLUDES="aclocal.m4 configure config.hin db.jar libtool.ac lt*.ac"
 
 # At a minimum, the following must be changed:
 # * chmod +w dist/Makefile.in dist/aclocal/tcl.ac dist/configure.ac
