@@ -1,4 +1,8 @@
 
+	* bin/cygport.in (__pkg_diff):
+	Only exclude aclocal.m4 from patch if generated by aclocal.
+	* lib/berkdb.cygclass (DIFF_EXCLUDES): Add aclocal.m4 to compensate.
+
 	* CYGWIN-PATCHES/README:
 	* lib/Makefile.am:
 	* lib/opensync.cygclass: New cygclass for OpenSync plugins.
